UI/spacing fixes

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -153,15 +153,9 @@ input, textarea
   max-width: 100%
   padding: 14px
 
-h1.header-title
-  display: none
-  color: var(--primary-text-color)
-  font-size: 24px
-  line-height: 30px
-  margin: 24px auto
-
 h1.page-title
   color: var(--accent-text-color)
+  font-size: 2em
   margin: 64px auto
   text-align: center
 
